<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="2" />
            <TextView
                android:id="@+id/tv_watchdog_30a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="Power Watchdog\n30 Amp Service"
                android:textColor="@color/Color_Red"
                android:textSize="25sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/Button_Reset_30A"
                android:layout_width="100dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/reset"
                android:scaleType="fitXY"
                android:background="@null"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="2" />

        </LinearLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <TextView
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="Connect"
                android:textColor="@color/Color_Black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/textview_connected_30A"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="Empty"
                android:textColor="@color/Color_Black"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/linearLayout_30a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />
            <TextView
                android:id="@+id/tv_energy_30a"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:gravity="center"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:text="@string/Title_Energy"
                android:textColor="@color/Color_White"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.radinet.ble_app.LedTextView
                android:id="@+id/Textview_Value_Energy_30a"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:gravity="center"
                android:background="@drawable/shape"
                android:text="000.0"
                android:textColor="@color/Color_White"
                android:textSize="40sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/tv_energy_unit_30a"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Unit_Energy"
                android:textColor="@color/Color_GrayItem"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/linearLayout2_30a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/tv_watt_30a"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:gravity="center"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:text="@string/Title_Watt"
                android:textColor="@color/Color_White"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.radinet.ble_app.LedTextView
                android:id="@+id/Textview_Value_Watt_30a"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:gravity="center"
                android:background="@drawable/shape"
                android:text="000"
                android:textColor="@color/Color_White"
                android:textSize="40sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_watt_unit_30a"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Unit_Watt"
                android:textColor="@color/Color_GrayItem"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/linearLayout3_30a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/tv_volt_30a"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:gravity="center"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:text="@string/Title_Volt"
                android:textColor="@color/Color_White"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.radinet.ble_app.LedTextView
                android:id="@+id/Textview_Value_Volt_30a"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:gravity="center"
                android:background="@drawable/shape"
                android:text="000"
                android:textColor="@color/Color_White"
                android:textSize="40sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_volt_unit_30a"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Unit_Volt"
                android:textColor="@color/Color_GrayItem"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/tv_amp_30a"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:gravity="center"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:text="@string/Title_Amp"
                android:textColor="@color/Color_White"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.radinet.ble_app.LedTextView
                android:id="@+id/Textview_Value_Amp_30a"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:gravity="center"
                android:background="@drawable/shape"
                android:text="00.0"
                android:textColor="@color/Color_White"
                android:textSize="40sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_amp_unit_30a"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Unit_Amp"
                android:textColor="@color/Color_GrayItem"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="7" />
    </LinearLayout>

</RelativeLayout>
